[package]
name = "ruby-ore-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
lazy_static = "^0.2.2"
ore-rs = { git = "https://github.com/cipherstash/ore.rs" }
ore-encoding-rs = { git = "https://github.com/cipherstash/ore_encoding.rs" }
rutie = "0.8.4"

[lib]
name = "ore_rs"
crate-type = ["cdylib"]
